--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
 				<p>Atención!!</p>
 				<p>No hagas planes para el 21 de abril</p>
 				<p>ya que yo lo he hecho por ti....</p>
-				<p>CUMPLO 40 AÑOS!!</p>
+				<p>CUMPLO 15 AÑOS!!</p>
 				<p>ups....quise decir """Veintisiempres"""</p>
 				<p><strong>Y necesito...</strong></p>
 				<p>invitados con o sin experiencia</p>
 				<p>para la celebración de mi cumple</p>
 				<p>y has sido elegid@</p>
 				<p>EL evento tendra lugar</p>
-				<p>a las 12:00 en mi casa</p>
+				<p>a las 12:30 en mi casa</p>
 				<p>Se recompensará con una gran fiesta...</p>
 				<p>hasta que el cuerpo aguante.</p>
 				<p>Habrá payasos, torta, piñata...</p>
-				<p>juegos de mesa, chescos, y muchos mas...</p>
+				<p>juegos de mesa, chescos, y mucho mas...</p>
 				<p>No faltes, pasaré lista :)</p>				
 			</div>
 		</div>
