--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 				<p>para la celebración de mi cumple</p>
 				<p>y has sido elegid@</p>
 				<p>EL evento tendra lugar</p>
+				<p>el día Domingo</p>
 				<p>a las 12:30 en mi casa</p>
 				<p>Se recompensará con una gran fiesta...</p>
 				<p>hasta que el cuerpo aguante.</p>
